Updated html tags

--- a/vocabs/templates/vocabs/index.html
+++ b/vocabs/templates/vocabs/index.html
@@ -25,7 +25,7 @@
     <div class="jumbotron">
 <div class="container p-5 bg-dark text-white">
     {% if vocab %}
-        <h1>{{ vocab.english }}</h1>
+        <h1 class="text-capitalize">{{ vocab.english }}</h1>
         <button type="button" class="btn btn-info" onclick="window.location.href = '{% url 'vocabs:detail' vocab.id %}';">Done</button>
     {% else %}
         <p>You have mastered all of the words!!
