--- a/vocabs/templates/vocabs/detail_example.html
+++ b/vocabs/templates/vocabs/detail_example.html
@@ -57,7 +57,7 @@
 <form action="{% url 'vocabs:update' vocab.id %}" method="post">
     {% csrf_token %}
     <div class="form-group">
-        <label for="example">You have made multiple incorrect attempts. Write an example for the <b>{{ vocab.hindi}}</b></label>
+        <p class="lead">You have made multiple incorrect attempts. Write an example for the <b><i class="text-warning">{{ vocab.hindi}}</i></b></p>
         <input type="text" class="form-control" id="example" placeholder="Your example sentence" name="example" required>
     </div>
     <button type="submit" class="btn btn-primary">Update</button>
