--- a/vocabs/templates/vocabs/detail_example.html
+++ b/vocabs/templates/vocabs/detail_example.html
@@ -60,7 +60,7 @@
         <p class="lead">You have made multiple incorrect attempts. Write an example for the <b><i class="text-warning">{{ vocab.hindi}}</i></b></p>
         <input type="text" class="form-control" id="example" placeholder="Your example sentence" name="example" required>
     </div>
-    <button type="submit" class="btn btn-primary">Update</button>
+    <button type="submit" class="btn btn-primary btn-lg">Update</button>
 </form>
         </div>
     </div>
