--- a/vocabs/templates/vocabs/results_update.html
+++ b/vocabs/templates/vocabs/results_update.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vocabs</title>
-    <!-- Latest compiled and minified CSS -->
+    <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- jQuery library -->
@@ -16,12 +15,9 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     {% load static %}
-    <script type="text/javascript" src="{% static '/js/vocabs/update_vocab.js' %}"></script>
 
     <title>Vocabs Result</title>
-    {% block javascript %}
-    <script src="{% static '/js/vocabs/update_ajax.js' %}"></script>
-    {% endblock %}
+
 </head>
 <body>
 <div class="container p-5"></div>
@@ -29,15 +25,16 @@
 <center>
     <div class="jumbotron">
         <div class="container p-5 bg-dark text-white">
-
-            <table class="table table-dark">
+            <form method="POST">
+                {% csrf_token %}
+                <table class="table table-dark">
                 <tr>
                     <th>English</th>
-                    <td id="english" contentEditable="false">{{ vocab.english }}</td>
+                    <td id="english" contentEditable="false">{{ form.english }}</td>
                 </tr>
                 <tr>
                     <th>Hindi</th>
-                    <td id="hindi" contentEditable="false">{{ vocab.hindi }}</td>
+                    <td id="hindi" contentEditable="false">{{ form.hindi }}</td>
                 </tr>
                 <tr>
                     <th>Examples</th>
@@ -49,15 +46,16 @@
                 </tr>
                 <tr>
                     <th>Source</th>
-                    <td id="source" contentEditable="false">{{ vocab.source }}</td>
+                    <td id="source" contentEditable="false">{{ form.source }}</td>
                 </tr>
                 <tr>
                     <th>Notes</th>
-                    <td id="notes" contentEditable="false">{{ vocab.notes }}</td>
+                    <td id="notes" contentEditable="false">{{ form.notes }}</td>
                 </tr>
                 <tr>
                     <th>Total Attempts</th>
                     <td>{{ vocab.total_attempts }}</td>
+
                 </tr>
                 <tr>
                     <th>Progress</th>
@@ -67,24 +65,14 @@
             </table>
 
             {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-            {% if vocab.attempts == 5 %}
-
-            <p class="lead text-success">
-            Congratulation..!!
-                <br>You have mastered the word <i class="fas fa-graduation-cap"></i>
-            </p>
-            {% endif %}
-
-            <button type="submit" class="btn btn-light btn-lg"
-                    onclick="location.href='{% url 'vocabs:results_update' vocab.id %}'"
-                    name='edit'>
-                <b>Edit</b>
+            <button type="submit" class="btn btn-light btn-lg">
+                <b>Submit</b>
             </button>
-            <button type="button" class="btn btn-light btn-lg" onclick="window.location.href = {% url 'vocabs:index' %}">
-                <b>Next Word?</b>
-            </button>
+            </form>
         </div>
     </div>
 </center>
+
+
 </body>
 </html>
